test_programs/compile_failure/noirc_frontend_tests_quote_code_fragments/src/main.nr

        fn main() {
            comptime {
                concat!(quote { assert( }, quote { false); });
            }
        }

        comptime fn concat(a: Quoted, b: Quoted) -> Quoted {
            quote { $a $b }
        }
    